--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
     <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="script.script">
 </head>
 <body>
     <div class:"container">
