--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <div class:"container">
         <h1>Formulário de inscrição</h1>
         
-        <label for="nome">NOME</label>
-        <input type="text" nome:"nome" placeholder="Nome">
-        <label for="email">EMAIL</label>
-        <input type="email" placeholder="seu melhor email">
-        <input type="submit" name="Enviar" id="">
+        <div class="formulario">
+            <label for="nome">NOME</label>
+            <input type="text" nome:"nome" placeholder="Nome">
+            <label for="email">EMAIL</label>
+            <input type="email" placeholder="seu melhor email">
+            <input type="submit" name="Enviar" id="">
+        </div>
     </div>
 
     <script>
